--- a/src/package.json
+++ b/src/package.json
@@ -15,6 +15,7 @@
     "express": "^4.21.1",
     "express-session": "^1.18.1",
     "mongoose": "^8.7.2",
-    "multer": "^1.4.5-lts.1"
+    "multer": "^1.4.5-lts.1",
+    "pug": "^3.0.3"
   }
 }
