--- a/package.json
+++ b/package.json
@@ -11,11 +11,13 @@
   "dependencies": {
     "bcrypt": "^5.1.1",
     "body-parser": "^1.20.3",
+    "bootstrap": "^5.3.3",
     "cookie-parser": "^1.4.7",
     "express": "^4.21.1",
     "express-session": "^1.18.1",
     "mongoose": "^8.7.2",
     "multer": "^1.4.5-lts.1",
-    "pug": "^3.0.3"
+    "pug": "^3.0.3",
+    "sass": "^1.80.4"
   }
 }
