list of all users

--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "mongoose": "^8.7.2",
     "multer": "^1.4.5-lts.1",
     "pug": "^3.0.3",
-    "sass": "^1.80.4"
+    "sass": "^1.80.4",
+    "socket.io": "^4.8.1"
   }
 }
