--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "express": "^4.21.1",
     "express-session": "^1.18.1",
     "mongoose": "^8.7.2",
+    "mongoose-sequence": "^6.0.1",
     "multer": "^1.4.5-lts.1",
     "pug": "^3.0.3",
     "sass": "^1.80.4",
