Update Deployment Direct Message

--- a/production/package.json
+++ b/production/package.json
@@ -1,6 +1,7 @@
 {
-  "name": "testingdirectmessages",
+  "name": "test",
   "version": "1.0.0",
+  "description": "test",
   "main": "index.js",
   "dependencies": {
     "abbrev": "^1.1.1",
@@ -211,6 +212,5 @@
     "start": "node index.js"
   },
   "author": "",
-  "license": "ISC",
-  "description": ""
+  "license": "ISC"
 }
