Revert "Update Deployment Direct Message"
This reverts commit 89ac829d492f47460661a1058a2f4475bbe71fb5.

--- a/production/package.json
+++ b/production/package.json
@@ -1,7 +1,6 @@
 {
-  "name": "test",
+  "name": "testingdirectmessages",
   "version": "1.0.0",
-  "description": "test",
   "main": "index.js",
   "dependencies": {
     "abbrev": "^1.1.1",
@@ -212,5 +211,6 @@
     "start": "node index.js"
   },
   "author": "",
-  "license": "ISC"
+  "license": "ISC",
+  "description": ""
 }
